--- a/css/main.css
+++ b/css/main.css
@@ -18,12 +18,12 @@
 }
 
 .title-text {
-  font-size: 18pt;
+  font-size: 29pt;
   color: #494949;
 }
 
 .subtitle-text {
-  font-size: 12pt;
+  font-size: 15pt;
   color: #494949;
 }
 
@@ -35,6 +35,7 @@
   overflow: hidden;
   width: 960px;
   margin: 0px auto;
+  z-index: 200;
 }
 
 #body div {
@@ -59,5 +60,10 @@
 }
 
 #footer {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
   text-align: center;
+  padding-bottom: 11px;
+  z-index: 1;
 }
