--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
 @font-face {
   font-family: 'klavika';
   src: url("fonts/Klavika-Light.otf") format("opentype");
@@ -27,6 +33,10 @@
   color: #494949;
 }
 
+#container {
+  min-height: 100%;
+  position: relative;
+}
 #header {
   text-align: center;
 }
@@ -35,7 +45,7 @@
   overflow: hidden;
   width: 960px;
   margin: 0px auto;
-  z-index: 200;
+  padding-bottom: 25px;
 }
 
 #body div {
@@ -64,6 +74,5 @@
   width: 100%;
   bottom: 0;
   text-align: center;
-  padding-bottom: 11px;
-  z-index: 1;
+  height: 25px;
 }
