--- a/css/main.css
+++ b/css/main.css
@@ -37,12 +37,14 @@ html, body {
   min-height: 100%;
   position: relative;
 }
+
 #header {
   text-align: center;
 }
 
 #detail-page-header {
   text-align: left;
+  margin: 10px;
 }
 
 #detail-page-header a {
@@ -58,14 +60,12 @@ html, body {
   background-size: 200px 30px;
 }
 
-
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
   #cmu-logo-detail-page {
     background-image: url('../img/CM_logo_horiz_black@2x.png');
     background-size: 200px 30px;
   }
 }
-
 
 #body {
   overflow: hidden;
