--- a/css/main.css
+++ b/css/main.css
@@ -24,8 +24,14 @@ a {
   font-style: normal;
 }
 
+.cmu-font {
+  float: right;
+  padding-top: 30px;
+}
+
 .create-lab-font {
   font-family: klavika, Helvetica, Arial, sans-serif !important;
+  padding-top: 30px;
 }
 
 .title-text {
@@ -41,15 +47,18 @@ a {
 }
 
 #container {
-  min-height: 100%;
+  height: 100%;
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 10px;
+  margin-top: 0px;
+  width: 960px;
+  text-align: center;
 }
 
 #header {
   text-align: center;
+  width: 945px;
 }
 
 #header-titles {
@@ -61,14 +70,14 @@ a {
 }
 
 #site-description {
-  margin: 30px 0 30px 0;
+  margin: 20px 0 0 0;
 }
 
 #cmu-logo-detail-page {
   position: relative;
-  float: right;
   width: 200px;
   height: 30px;
+  margin-top: 10px;
   background-image: url('../img/CM_logo_horiz_black.png');
   background-size: 200px 30px;
 }
@@ -83,20 +92,19 @@ a {
 #body {
   overflow: hidden;
   width: 960px;
-  margin: 20px auto 0;
+  margin: 30px auto 0;
   padding-bottom: 25px;
 }
 
 .thumbnail {
   width: 225px;
-
   float: left;
   margin-bottom: 20px;
-  margin-right: 7px;
+  margin-right: 12px;
 }
 
 .thumbnail a {
-  color: black
+  color: black;
 }
 
 .thumbnail-image {
@@ -119,9 +127,10 @@ a {
 #footer {
   position: absolute;
   width: 100%;
-  bottom: 10px;
   text-align: center;
   height: 25px;
+  font-family: klavika, Helvetica, Arial, sans-serif !important;
+  bottom: 30px;
 }
 
 #footer a {
