--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,34 @@
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Open Sans'), local('OpenSans'), url(http://themes.googleusercontent.com/static/fonts/opensans/v8/cJZKeOuBrn4kERxqtaUH3T8E0i7KZn-EPnyo3HZu7kw.woff) format('woff');
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 600;
+  src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url(http://themes.googleusercontent.com/static/fonts/opensans/v8/MTP_ySUJH_bn48VBG8sNSnhCUOGz7vYGh680lGh-uXM.woff) format('woff');
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Open Sans Bold'), local('OpenSans-Bold'), url(http://themes.googleusercontent.com/static/fonts/opensans/v8/k3k702ZOKiLJc3WVjuplzHhCUOGz7vYGh680lGh-uXM.woff) format('woff');
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 800;
+  src: local('Open Sans Extrabold'), local('OpenSans-Extrabold'), url(http://themes.googleusercontent.com/static/fonts/opensans/v8/EInbV5DfGHOiMmvb1Xr-hnhCUOGz7vYGh680lGh-uXM.woff) format('woff');
+}
+
 html, body {
   margin: 0;
   padding: 0;
   height: 100%;
-  background-color: #ededed;
-  font-family: Helvetica, Arial, sans-serif;
+  background-color: white;
+  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 }
 
 a {
@@ -66,7 +91,7 @@ a {
 #header {
   text-align: center;
   width: 944px;
-  background-color: #ededed;
+  background-color: white;
 }
 
 #header-titles {
@@ -79,6 +104,10 @@ a {
 
 #site-description {
   margin: 30px 0 0 0;
+  font-size: 16px;
+  text-align: left;
+  margin-left: 124px;
+  width: 720px;
 }
 
 #cmu-logo-detail-page {
@@ -103,33 +132,50 @@ a {
   margin: 30px auto 0;
 }
 
-.thumbnail {
-  width: 225px;
-  float: left;
-  margin-bottom: 20px;
-  margin-right: 12px;
+#body-index {
+  overflow: hidden;
+  width: 1100px;
+  margin-top: 20px;
+  margin-left: -17px;
 }
 
 .thumbnail a {
+  width: 245px;
+  float: left;
+  height: 300px;
+  border-radius: 2px;
+  margin-right: -6px;
+  margin-top: -5px;
   color: black;
+  border: 0px;
+}
+
+.thumbnail a:hover {
+  color: white;
+  background: #e28b8b;
 }
 
 .thumbnail-image {
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
+  border-radius: 2px;
+  width: 217px;
+  margin-top: 15px;
 }
 
 .thumbnail-title {
+  text-align: left;
   margin-top: 5px;
   margin-bottom: 5px;
+  margin-left: 15px;
   font-weight: 700;
+  width: 217px;
 }
 
 .thumbnail-description {
   text-align: left;
   margin-top: 2px;
-  font-size: small;
+  margin-left: 15px;
+  font-size: 10pt;
+  width: 217px;
 }
 
 #footer {
@@ -170,9 +216,9 @@ a {
   z-index: 2;
   top: 45px;
   width: 942px;
-  height: 488px;
+  height: 494px;
   margin-left: 2px;
-  background: #ededed;
+  background: white;
   -moz-box-shadow: 0 5px 10px 0px rgba(0,0,0,0.3);
   -webkit-box-shadow: 0 5px 10px 0px rgba(0,0,0,0.3);
   box-shadow: 0 5px 10px 0px rgba(0,0,0,0.3);
