--- a/css/main.css
+++ b/css/main.css
@@ -111,11 +111,21 @@ a {
   text-decoration: none;
 }
 
+#site-description-old {
+  font-size: 16px;
+  text-align: left;
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 826px;
+}
+
 #site-description {
   margin-top: 30px;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
+  display: none;
 }
 
 #site-description td {
