--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,7 @@ a {
 .title-text {
   float: left;
   font-size: 23pt;
-  color: rgb(60,60,60);
+  color: rgb(80,80,80);
   margin-right: 10px;
 }
 
@@ -102,11 +102,23 @@ a {
   text-align: left;
 }
 
-#header-titles a {
-  text-decoration: none;
+#menu {
+  margin-top: -25px;
+  float: right;
+  font-size: 13pt;
+  display: none;
 }
 
-#site-description-old {
+#menu a {
+  color: rgb(80,80,80);
+  font-family: klavika, Helvetica, Arial, sans-serif;
+}
+
+#menu a:hover {
+  color: rgb(0,0,0);
+}
+
+.site-description {
   font-size: 16px;
   text-align: left;
   margin-top: 30px;
@@ -115,49 +127,26 @@ a {
   width: 826px;
 }
 
-#site-description {
-  margin-top: 30px;
+.about-description {
+  text-align: left;
   margin-left: auto;
   margin-right: auto;
-  width: 100%;
-  display: none;
-}
-
-#site-description td {
-  width: 50%;
-}
-
-#site-description p {
-  font-size: 16px;
-  text-align: justify;
   margin-top: 0px;
-  margin-bottom: 0px;
+  width: 826px;
 }
 
-#site-description h3 {
+.about-description p {
+  font-size: 16px;
+  margin-top: 0px;
+  margin-bottom: 30px;
+}
+
+.about-description h3 {
   font-size: 18px;
   font-weight: bold;
-  text-align: left;
   margin: 0;
-  margin-bottom: 3px;
-}
-
-#site-description .what p {
-  margin-left: 69px;
-  width: 321px;
-}
-
-#site-description .what h3 {
-  margin-left: 69px;
-}
-
-#site-description .who p {
-  margin-left: 83px;
-  width: 321px;
-}
-
-#site-description .who h3 {
-  margin-left: 83px;
+  margin-bottom: 5px;
+  color: rgb(80,80,80);
 }
 
 #cmu-logo-detail-page {
@@ -216,6 +205,7 @@ a {
   margin-left: 15px;
   font-weight: 700;
   width: 217px;
+  color: rgb(60,60,60);
 }
 
 .thumbnail-description {
@@ -230,16 +220,27 @@ a {
   line-height: 18px;
 }
 
+.line {
+  border-top: 1px solid #dfdfdf;
+  margin-bottom: 15px;
+  margin-top: 10px;
+  width: 100%;
+}
+
 #footer {
   width: 100%;
   text-align: center;
-  height: 25px;
-  margin-top: 30px;
+  height: 50px;
+  margin-top: 15px;
   font-family: klavika, Helvetica, Arial, sans-serif !important;
 }
 
 #footer a {
-  color: black;
+  color: rgb(80,80,80);
+}
+
+#footer a:hover {
+  color: rgb(0,0,0);
 }
 
 #embed {
@@ -257,7 +258,7 @@ a {
 
 #embed-description ul {
   list-style: none;
-  padding:0;
+  padding: 0;
 }
 
 #embed-description ul a{
@@ -266,13 +267,14 @@ a {
 
 #embed-description h3 {
   margin-top: 0;
+  color: rgb(60,60,60);
 }
 
 #embed-fixed {
   z-index: 2;
   top: 45px;
-  width: 942px;
-  height: 494px;
+  width: 960px;
+  height: 492px;
   margin-left: 2px;
   background: white;
   -moz-box-shadow: 0 5px 10px 0px rgba(0,0,0,0.3);
@@ -285,7 +287,7 @@ a {
   z-index: 1;
   position: absolute;
   top: 530px;
-  width: 943px;
+  width: 960px;
   margin-left: 3px;
   text-align: left;
 }
