Added black version of "Carnegie Mellon University" word mark

--- a/css/main.css
+++ b/css/main.css
@@ -165,6 +165,22 @@ a {
   }
 }
 
+#cmu-logo-header {
+  position: relative;
+  width: 334px;
+  height: 30px;
+  margin-top: 10px;
+  background-image: url('../img/CMU_logo_horiz_black.png');
+  background-size: 334px 30px;
+}
+
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+  #cmu-logo-header {
+    background-image: url('../img/CMU_logo_horiz_black@2x.png');
+    background-size: 334px 30px;
+  }
+}
+
 #body {
   overflow: hidden;
   width: 960px;
